# mytest

./: .gitignore
examples/results/: 20160501_cutted_by_bounding_box.tif  20160501_cutted_by_geojson.tif
satellite_images/: 20160401.tif  20160421.tif  20160501.tif  20160508.tif  20160518.tif
your-project/: Dockerfile  Makefile  pyproject.toml  satellite_images
your-project/src/app/: main.py  settings.py
your-project/src/app/api/: api.py  endpoints.py  models.py
your-project/src/app/config/: gunicorn_config.py
your-project/src/app/processing/: cutter.py  exceptions.py  models.py
your-project/src/tests/: conftest.py  test_api.py  test_processing.py
your-project/src/tests/test_data/: cropped_output.tif  geometry_cut.geojson
