[tool.poetry]
name = "python-test-files"
version = "0.1.0"
description = ""
authors = ["vscode0909 <vscode0909@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gdal = "3.9.3"
pytest = "^8.3.3"
pydantic = "^2.9.2"
numpy = "^2.1.3"
pyproj = "^3.7.0"
fastapi = "^0.115.5"
gunicorn = "^23.0.0"
uvicorn = "^0.32.1"
httpx = "^0.27.2"
geojson-pydantic = "^1.1.2"
pydantic-settings = "^2.6.1"
rasterio = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

